<resources>
    <string name="default_text">default</string>
    <string name="default_text_long">default default default default default default default default default default default default default default default default default default default default default default default default default default default default</string>
    <string name="default_datetime_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="default_numbers">0123456789</string>
    <string name="help_main">Main screen help</string>
    <string name="filters_button_help">Press to see your filters</string>
    <string name="logs_button_help">Press to see your sms logs. Needs registration password for access.</string>
    <string name="settings_button_help">Press to go to app setting</string>
    <string name="tops_button_help">Press to see tops of sms frauders, spam and words</string>
    <string name="fast_phone_number_filter_help">Fast add of phone number filter</string>
    <string name="fast_word_filter_help">Fast add of word filter</string>
    <string name="main_help">There are also statastics on main screen. Your can reset it in settings. Use menu button on other screens to open help. Press back button to close this window.</string>
    <string name="help_filters">Filters screen help</string>
    <string name="back_button_help">Press to go back to main screen</string>
    <string name="add_button_help">Press to add new word/phone number filter(depends on currently selected tab)</string>
    <string name="clear_button_help">Press to clear all filters on current tab</string>
    <string name="filters_help">Filters screen has two tabs with phone number filters and word filter. Your can delete every item in the list by pressing bin button.</string>
    <string name="help_logs">Logs screen help</string>
    <string name="filter_wnd_button_help">Press to open logs filter window</string>
    <string name="reset_filter_button_help">Press to reset current logs filter</string>
    <string name="logs_help">Logs screen has three tabs with passed sms, blocked sms and suspicious sms. Suspicious sms are sms which match top 100 fraud filters, but your receive them with warning message from app. Your can tap on every item to see details.</string>
    <string name="help_tops">Tops screen help</string>
    <string name="check_button_help">Press to check your sms</string>
    <string name="complain_button_help">Press to complain sms</string>
    <string name="add_all_button_help">Press to add all filters from current tab</string>
    <string name="tops_help">Tops screen has three tabs with frauders, spam and words tops. You can add each of these filters. When you tap on one of the filters you can see datails of this filter and examples of messages. Server saves three last message examples. Also you can vote for filters one time per 24 hours.</string>
    <string name="help_settings">Settings screen help</string>
    <string name="save_button_help">Press to save settings</string>
    <string name="settings_help">On this screen you can change app language, on/off server synchronization of filters, on/off usage of top 100 filters for fraud notifications, clear sms logs or reset statistics.</string>
    <string name="app_name">Sms Firewall</string>
    <string name="crash_report">Crash report</string>
    <string name="crash_report_text">Sorry, but Sms Firewall crashed :-( We collected all needed information to fix this error in the next version. Also you can write description of situation in which error occurred, it will be very helpful.</string>
    <string name="stat_blocked">Blocked SMS: %d</string>
    <string name="stat_suspicious">Suspicious SMS: %d</string>
    <string name="stat_recieved">Received SMS: %d</string>
    <string name="stat_last_sync">Last server sync: %s</string>
    <string name="word">Word</string>
    <string name="phone_number">Phone number</string>
    <string name="word_with_dots">Word:</string>
    <string name="phone_number_with_dots">Phone number:</string>
    <string name="filter_category">Filter category:</string>
    <string name="filter_type">Filter type:</string>
    <string name="filters">Filters</string>
    <string name="logs">Logs</string>
    <string name="select_source_popup_title">Select the source</string>
    <string name="select_source_to_check">Select the source of message to check</string>
    <string name="select_sms_to_complain">Select sms to complain</string>
    <string name="type_word_to_complain">Type the word to complain</string>
    <string name="select_sms_for_example">Select sms example</string>
    <string name="wifi_connect_error">Wi-fi connecting failed</string>
    <string name="inbox_sms">Inbox SMS</string>
    <string name="income_calls">Income calls</string>
    <string name="suspicious_sms">Suspicious sms messages</string>
    <string name="numbers">Phone numbers</string>
    <string name="words">Words</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="send_report">Send report</string>
    <string name="enter_word">Enter word</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_value_warning">Enter value, please!</string>
    <string name="blocked">Blocked (%d)</string>
    <string name="suspicious">Suspicious (%d)</string>
    <string name="filtered">Passed (%d)</string>
    <string name="journal">Logs</string>
    <string name="frauds">Frauders</string>
    <string name="spam">Spam</string>
    <string name="tops">Top 100</string>
    <string name="sync_on">Server sync</string>
    <string name="fraud_sms_notification">Fraud sms notification</string>
    <string name="reset_stats">Reset statistics</string>
    <string name="reset">Reset</string>
    <string name="filter_reseted">Filter reseted</string>
    <string name="reset_logs_password">Reset logs password</string>
    <string name="clear_logs">Clear logs</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string-array name="sources">
        <item>Contacts</item>
        <item>Inbox SMS</item>
        <item>Income calls</item>
        <item>Suspicious SMS</item>
        <item>Frauder\'s top</item>
        <item>Enter word</item>
        <item>Enter phone number</item>
    </string-array>
    <string-array name="top_sources">
        <item>Contacts</item>
        <item>Inbox SMS</item>
        <item>Income calls</item>
        <item>Enter value</item>
    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>                
    </string-array>
    <string-array name="lang_iso_codes">
        <item>US</item>
        <item>RU</item>                
    </string-array>
    <string-array name="filter_categories">
        <item>Generic</item>
        <item>Spam</item>
        <item>Fraud</item>
    </string-array>
    <string-array name="filter_types">
        <item>Phone number/name</item>
        <item>Word</item>        
    </string-array>
    <string name="no_filters_found">There are no filters for input "%s"!</string>
    <string name="no_sms_warn">There is no inbox sms!</string>
    <string name="warning">Warning!</string>
    <string name="no_income_calls">There are no income calls</string>
    <string name="no_suspicious_sms">There are no suspicious sms messages</string>
    <string name="mobile_internet">Mobile Internet</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="close">Close</string>
    <string name="add_example">Add example</string>
    <string name="to_my_filters">To my filters</string>
    <string name="inet_conn_on">Please, turn on Internet connection:</string>
    <string name="registration_welcome">Registartion welcome</string>
    <string name="sync_filters_text">Check this option to sync your filters:</string>
    <string name="sync_filters">sync filters</string>
    <string name="use_email_text">Check this option to sync by e-mail on other devices:</string>
    <string name="use_email">use e-mail</string>
    <string name="your_email">Your e-mail:</string>
    <string name="enter_password_text">Enter password for secure store of your sms logs and your filters on server:</string>
    <string name="send_suspicious_text">Give us oppotunity to improve Sms Firewall:</string>
    <string name="send_suspicious">send suspicious sms</string>
    <string name="send">Send</string>
    <string name="enter_email">Please, enter correct e-mail!</string>
    <string name="password_length_error">Password is too short, min length is 8 chars</string>
    <string name="have_errors">There are some error! Please, fix them!</string>
    <string name="registration_thanks">Big thanks for registration!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Confirmation</string>
    <string name="reset_statistics_conf">Do you really want to reset statistics?</string>
    <string name="filter_delete_conf">Do you really want to delete this filter?</string>
    <string name="all_logs_clear_conf">Do you really want to delete all logs?</string>
    <string name="logs_empty">Logs are empty!</string>
    <string name="statistic_reseted">Statistics reseted!</string>
    <string name="password_saved">Password saved!</string>
    <string name="enter_new_password">Please, enter new logs password:</string>
    <string name="filters_clear_conf">Do you really want to clear filters on this tab?</string>
    <string name="fraud_warn">The message from "%s" can be a fraud</string>
    <string name="ask_logs_password">Please, enter password to access logs.</string>
    <string name="logs_password_error">Password is not correct!</string>
    <string name="logs_clear_conf">Do you really want to clear logs on this tab?</string>
    <string name="sender">Sender:</string>
    <string name="logs_filter">Logs filter</string>
    <string name="body_contains">Body contains:</string>
    <string name="date_from">Date from:</string>
    <string name="date_to">Date to:</string>
    <string name="date">Date:</string>
    <string name="add_all_from_top">Do you really want to add all filters on this tab?</string>
    <string name="item_not_selected">Select the item first</string>
    <string name="example_added_to_filter">Example added to filter</string>
    <string name="filters_added">Filters added!</string>
    <string name="filter_added">Filter added!</string>
    <string name="example_added">We have such filter. Your example have been added!</string>
    <string name="have_such_filter_and_example">We have such filter and example.</string>
    <string name="message_examples">Message examples:</string>
    <string name="message_example">Message example:</string>
    <string name="message">Message:</string>
    <string name="messages_votes">Votes:</string>
    <string name="messages_position">Top position:</string>
    <string name="filter_info_title">Filter information and examples</string>
    <string name="message_view_title">Message view</string>
    <string name="complain_info_title">Complain information</string>
    <string name="votes_per_day_error">You can not vote for this item this day</string>
    <string name="error_dialog_title">Error occurred</string>
    <string name="server_error">Server error occurred</string>
    <string name="voted_today_error">You have voted today for this filter</string>
    <string name="vote_added">Vote successfuly added</string>
    <string name="add_new_sms_filter">Add new SMS filter</string>
    <string name="content_control">Content control</string>
    <string name="statistics">Statistics</string>
    <string name="last_sync">Last server sync %s</string>
    <string name="copyright">© 2015 Quantum Mobile Inc. Verion %s</string>
</resources>