<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="270dp"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/registration_text"
            style="@style/DialogHeaderText"
            android:text="@string/registration_welcome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_filters_text" />

            <CheckBox
                android:id="@+id/syncFilters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sync_filters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_email_text" />

            <CheckBox
                android:id="@+id/useEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:enabled="false"
                android:text="@string/use_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email" />

            <EditText
                android:id="@+id/userEmail"
                style="@style/EditText"
                android:ems="10"
                android:enabled="false"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_password_text" />

            <EditText
                android:id="@+id/logsPassword"
                style="@style/EditText"
                android:ems="10"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_suspicious_text" />

            <CheckBox
                android:id="@+id/sendSuspicious"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/send_suspicious" />
        </LinearLayout>

        <Button
            android:id="@+id/saveReg"
            style="@style/BlackButton"
            android:text="@string/ok" />
    </LinearLayout>

</ScrollView>